--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>공유하기 예제</title>
 </head>
 <body>
-  <h1>Web Share API를 사용한 공유</h1>
+  <h1>Web Share API</h1>
   <button id="share-button">공유하기</button>
 
   <script>
@@ -15,8 +15,8 @@
       if (navigator.share) {  // Web Share API 지원 여부 확인
         try {
           await navigator.share({
-            title: '공유 제목',
-            text: '공유하기 내용!',
+            title: '공유하기 제목입니다',
+            text: '공유하기 내용입나다!',
             url: "https://www.drtour.com/" // 현재 페이지 URL 공유
           });
           console.log("공유 성공");
