--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       if (navigator.share) {  // Web Share API 지원 여부 확인
         try {
           await navigator.share({
-            title: '공유하기 제목입니다',
-            text: '공유하기 내용입니다!\n두번째줄<br>세번째줄',
+            title: '공유하기!!!!',
+            text: '공유하기 내용입니다!\n두번째줄\n세번째줄\넷\n다섯\n여섯\n일곱',
             url: "https://www.drtour.com/" // 현재 페이지 URL 공유
           });
           console.log("공유 성공");
